@@ -487,8 +487,9 @@ public class TestDFSClientRetries {
       LocatedBlock goodLocatedBlock = goodBlockList.get(0);
       LocatedBlock badLocatedBlock =
           new LocatedBlock(goodLocatedBlock.getBlock(), new DatanodeInfo[]{
-              DFSTestUtil.getDatanodeInfo("1.2.3.4", "bogus", 1234)},
-              goodLocatedBlock.getStartOffset(), false);
+              DFSTestUtil.getDatanodeInfo("1.2.3.4", "bogus", 1234)
+              });
+      badLocatedBlock.setStartOffset(goodLocatedBlock.getStartOffset());
 
 
       List<LocatedBlock> badBlocks = new ArrayList<>();
